@@ -18,7 +18,8 @@ $Id$
 =head1 DESCRIPTION
 
 This script runs one side of the throughput test for a cross host testing.  
-The script needs to be run on each of the two hosts involved in the test.
+The script needs to be run on each of the two hosts involved in the test 
+using the same parameters on each host.
 
 The test consists of two halves, an originating (server) side and a reflecting 
 (client) side. The servers involved in the test are are stored in 
@@ -42,6 +43,8 @@ multicast (Reliable)
 =back
 
 =head1 EXAMPLE
+
+  run the same command on both hosts:
 
   run_test.pl tcp
 
@@ -193,29 +196,22 @@ for ( ; $starting_test_number < $ending_test_number; $starting_test_number++) {
     my $common_args = "-P -t 120 -h $repo_host:$port1 -i $trans_config_file ";
 
     if ($role == PerlDDS::Cross_Sync_Common::SERVER) {
-        $DCPSREPO = PerlDDS::create_process
-                  ("$bench_location/bin/run_test",
-                   "-S -t 150 -h $repo_host:$port1");
-
-        print $DCPSREPO->CommandLine(). "\n";
-        $DCPSREPO->Spawn ();
-        if (PerlACE::waitforfile_timed ($dcpsrepo_ior, 30) == -1) {
-            print STDERR "ERROR: waiting for DCPSInfo IOR file\n";
-            $DCPSREPO->Kill ();
-            exit 1;
-        }
-
         $Publisher = PerlDDS::create_process
                   ("$bench_location/bin/run_test",
-                   "$common_args -s $pub_config_file -v -f bidir$starting_test_number.results");
+                   "$common_args -S -s $pub_config_file -v -f bidir$starting_test_number.results");
 
         print $Publisher->CommandLine(). "\n";
         $Publisher->Spawn ();
 
+        if (PerlACE::waitforfile_timed ($dcpsrepo_ior, 30) == -1) {
+            print STDERR "ERROR: waiting for DCPSInfo IOR file\n";
+            $Publisher->Kill ();
+            exit 1;
+        }
+
         if ($CS->ready () == -1) {
             print STDERR "ERROR: subscriber failed to initialize.\n";
             $status = 1;
-            $DCPSREPO->Kill ();
             $Publisher->Kill ();
             exit 1;
         }
@@ -225,14 +221,6 @@ for ( ; $starting_test_number < $ending_test_number; $starting_test_number++) {
             print STDERR "ERROR: publisher returned $PublisherResult \n";
             $status = 1;
         }
-
-        $ir = $DCPSREPO->TerminateWaitKill(30);
-        ## Ignore the return value because the run_test does not cleanly
-        ## shutdown the repo when run with a duration.
-        #if ($ir != 0) {
-        #    print STDERR "ERROR: DCPSInfoRepo returned $ir\n";
-        #    $status = 1;
-        #}
 
         unlink $dcpsrepo_ior;
     } else {
